--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,3 +23,17 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+      
+  android-test:
+  
+      runs-on: ubuntu-latest
+      
+      steps:
+        - uses: reactivecircus/android-emulator-runner@v2
+          name: Run instrumented tests
+          with:
+            api-level: 23
+            target: default
+            arch: x86
+            profile: Nexus 6
+            script: ./gradlew connectedCheck --stacktrace
