--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,6 +29,7 @@ jobs:
       runs-on: ubuntu-latest
       
       steps:
+        - uses: actions/checkout@v2
         - uses: reactivecircus/android-emulator-runner@v2
           name: Run instrumented tests
           with:
