--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -42,6 +42,7 @@ jobs:
           uses: sonarsource/sonarcloud-github-action@master
           env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
             args: >
               -Dsonar.coverage.jacoco.xmlReportPaths=app/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
