--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -50,3 +50,4 @@ jobs:
               -Dsonar.coverage.jacoco.xmlReportPaths=app/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
               -Dsonar.organization=matthinc
               -Dsonar.projectKey=android_test
+              -Dsonar.sources=app/src/main/java
